landing template done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,14 +42,12 @@ console.log(groupedNotes);
 ---
 
 <Layout>
-  <main
-    class="w-full h-full flex flex-col items-center justify-start p-32 bg-neutral-100"
-  >
+  <main class="w-full flex flex-col items-center justify-start p-20 pb-36">
     <div class="w-full max-w-3xl p-4 flex flex-col items-center gap-16">
       <div class="w-full flex justify-center">
         <h1 class="tracking-tighter">
           <a href="https://ryanwqiu.com" target="_blank" rel="noopener"
-            >YottaYocta's</a
+            >@Ryan's</a
           > Class Notes
         </h1>
       </div>
