--- a/src/layouts/Note.astro
+++ b/src/layouts/Note.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+const { frontmatter } = Astro.props;
 ---
 
 <!doctype html>
@@ -15,18 +16,16 @@ import "../styles/global.css";
       src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"
       is:inline></script>
 
-    <title>Ryan's Notes</title>
+    <title>{frontmatter.title}</title>
   </head>
-  <body class="bg-neutral-100">
-    <slot />
+  <body class="bg-neutral-100 flex flex-col items-center">
+    <nav class="w-full max-w-2xl p-4">
+      <a href="/" class="underline hover:no-underline cursor-pointer">Home</a>
+    </nav>
+    <main
+      class="w-full max-w-2xl flex flex-col items-start p-4 pb-32 gap-8 tracking-tight"
+    >
+      <slot />
+    </main>
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
