style: block quotes

--- a/src/layouts/Note.astro
+++ b/src/layouts/Note.astro
@@ -23,7 +23,7 @@ const { frontmatter } = Astro.props;
       <a href="/" class="underline hover:no-underline cursor-pointer">Home</a>
     </nav>
     <main
-      class="w-full max-w-2xl flex flex-col items-start p-4 pb-32 gap-8 tracking-tight"
+      class="w-full max-w-2xl flex flex-col items-start p-4 pb-32 gap-8 tracking-tight note"
     >
       <slot />
     </main>
