--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,25 @@
 @import "tailwindcss";
 
-@layer theme {
-}
+@layer utilities {
+  .note > h1 {
+    font-size: large;
+  }
 
-h1 {
-  font-size: large;
+  .note > figure {
+    padding: 1.5rem 1.5rem;
+    background: var(--color-neutral-50);
+    border-radius: var(--radius-md);
+    border: solid var(--color-neutral-300) 1px;
+  }
+
+  .note > figure > figcaption {
+    background-color: var(--color-neutral-200);
+    color: var(--color-neutral-900);
+    width: min-content;
+    padding: 0rem 0.5rem;
+    text-wrap: nowrap;
+    margin-bottom: 1rem;
+    border-radius: var(--radius-sm);
+    /* line-height: 0.5rem; */
+  }
 }
