task: notes on reducability for vertex cover, independent set, and set cover

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,4 +22,12 @@
     border-radius: var(--radius-sm);
     /* line-height: 0.5rem; */
   }
+
+  .note > p {
+    text-wrap-style: pretty;
+  }
+  .note > hr {
+    width: 100%;
+    border: solid #000 1px;
+  }
 }
